---
source: prqlc/prql-compiler/tests/integration/queries.rs
expression: "# mssql:test\nfrom tracks\nsort {+track_id}\ntake 3..5\n"
input_file: prqlc/prql-compiler/tests/integration/queries/take.prql
---
SELECT
  *
FROM
  tracks
ORDER BY
  track_id
LIMIT
  3 OFFSET 2

